--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "apollo-server-express": "^3.4.0",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "graphql": "^15.6.1",
     "mongoose": "^6.0.11"
