--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "apollo-server-express": "^3.4.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.27.1",
     "express": "^4.17.1",
     "graphql": "^15.6.1",
     "jsonwebtoken": "^8.5.1",
