--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "graphql": "^15.6.1",
     "jsonwebtoken": "^8.5.1",
+    "mdbreact": "^5.1.0",
     "mongoose": "^6.0.11",
     "nodemon": "^2.0.14"
   }
