--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-graphql": "^0.9.3",
     "apollo-server": "^3.4.0",
     "apollo-server-express": "^3.4.0",
     "bcrypt": "^5.0.1",
@@ -19,7 +20,7 @@
     "graphql": "^15.6.1",
     "jsonwebtoken": "^8.5.1",
     "mdbreact": "^5.1.0",
-    "mongoose": "^6.0.11",
+    "mongoose": "^6.0.12",
     "nodemon": "^2.0.14"
   }
 }
