--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.1.3",
     "mdbreact": "^5.1.0",
     "react": "^17.0.2",
+    "react-animated-text": "^0.1.4",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
