--- a/client/package.json
+++ b/client/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.4.16",
+    "@apollo/react-hooks": "^4.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "graphql": "^15.6.1",
+    "jwt-decode": "^3.1.2",
     "mdbreact": "^5.1.0",
     "react": "^17.0.2",
     "react-animated-text": "^0.1.4",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.10.0",
     "web-vitals": "^1.1.2"
