--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,16 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "dayjs": "^1.10.7",
     "graphql": "^15.6.1",
     "mdbreact": "^5.1.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-animated-text": "^0.1.4",
     "react-bootstrap": "^2.0.0",
+    "react-dayjs": "^0.3.2",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.10.0",
     "web-vitals": "^1.1.2"
