--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "dayjs": "^1.10.7",
     "graphql": "^15.6.1",
     "jwt-decode": "^3.1.2",
+    "mdb-react-ui-kit": "^1.5.0",
     "mdbreact": "^5.1.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
