set up static assets inserver.js

--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
   "name": "present",
   "version": "1.0.0",
-  
   "description": "",
   "main": "server/server.js",
   "scripts": {
-    "watch": "npm-watch-*",
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "cd server && npm start",
-    "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-    "install": "cd server && npm i && cd ../client && npm i",
-    "seed": "cd server && npm run seed"
+    "start": "react-scripts start",
+    "dev": "(cd server && npm run start) & cd client && npm run start"
   },
+  "proxy": "http://localhost:3000",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "react-scripts": "^4.0.3"
   },
   "devDependencies": {
     "concurrently": "^5.1.0"
