--- a/package.json
+++ b/package.json
@@ -4,15 +4,26 @@
   "description": "",
   "main": "server/server.js",
   "scripts": {
-    "start": "react-scripts start",
-    "dev": "(cd server && npm run start) & cd client && npm run start"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "dev": "(cd server && npm run start) & cd client && npm run start",
+    "start:prod": "cd server && npm start",
+    "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "seed": "cd server && npm run seed"
   },
   "proxy": "http://localhost:3000",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^3.4.0",
+    "bcrypt": "^5.0.1",
+    "express": "^4.17.1",
+    "graphql": "^15.7.0",
     "if-env": "^1.0.4",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.12",
+    "nodemon": "^2.0.14",
     "react-scripts": "^4.0.3"
   },
   "devDependencies": {
