--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "dev": "(cd server && npm run start) & cd client && npm run start",
     "start:prod": "cd server && npm start",
-    "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "start:dev": "concurrently \"cd server && npm run start\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed"
   },
-  "proxy": "http://localhost:3000",
+  "proxy": "http://localhost:3001",
   "keywords": [],
   "author": "",
   "license": "ISC",
